# my_chess

./: .gitignore  LICENSE  README.md  README_CN.md  Readme.md  pyproject.toml  requirements.txt  run.py
.agent/rules/: general.md
Chess_Core/: Chessboard.py  Chessman.py  Point.py  Test.py
Chess_UI/: cli_game.py  win_game.py
chess_core/: chessboard.py  chessman.py  move_notation.py  point.py  zobrist.py
chess_ui/: cli_game.py  win_game.py
tests/: test_fen.py  test_rules.py  test_ucci.py
